# learn-llm-rag

./: .gitignore  README.md  pyproject.toml
notebooks/: embeddings.py  hn_news.json  llm.py  lr_news.json  summarizer-evaluate-poc.ipynb  summarizer-ingest-poc.ipynb  summarizer-ui-poc.ipynb  summarizer_eval_subset.json  summarizer_ground_truth.json  vectordb.py
