[project]
name = "learn-llm-rag"
version = "0.1.0"
description = "Learn LLM RAG application"
authors = [
    {name = "Alexander Kupreyeu", email = ""},
]
dependencies = [
    "numpy>=2.1.0",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "openai>=1.42.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.5",
    "pymilvus[model]>=2.4.5",
    "httpx>=0.27.0",
    "sentence-transformers==2.7.0",
    "beautifulsoup4>=4.12.3",
    "cleanurl>=0.1.15",
    "readability-lxml>=0.8.1",
    "lxml[html_clean]>=5.3.0",
    "more-itertools>=10.5.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
local = [
    "jupyter>=1.0.0",
]
dev = [
    "ruff>=0.6.2",
    "mypy>=1.11.1",
]
[tool.pdm]
distribution = false
